# LibraryFrench

./: CMakeLists.txt  README.md
api/: CMakeLists.txt
api/include/: Book.h  Client.h  Console.h  ConsoleFramebuffer.h  EchoCommand.h  Factory.h  ICommand.h  InterpreterBuilder.h  LibraryManager.h  Media.h  Movie.h  VideoGames.h
api/src/: Book.cpp  Client.cpp  Console.cpp  ConsoleFramebuffer.cpp  EchoCommand.cpp  Factory.cpp  InterpreterBuilder.cpp  LibraryManager.cpp  Media.cpp  Movie.cpp  VideoGames.cpp
sample/: CMakeLists.txt
sample/src/: main.cpp
